fix python-qscintilla dependencies
git-svn-id: file:///srv/repos/svn-packages/svn@107204 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/qscintilla/trunk/PKGBUILD
+++ b/qscintilla/trunk/PKGBUILD
@@ -46,7 +46,7 @@ package_qscintilla() {
 
 package_python-qscintilla() {
     pkgdesc="Python 3 bindings for QScintilla2"
-    depends=('qscintilla' 'python-qt')
+    depends=('python-qt' 'python2-qscintilla')
 
     cd "${srcdir}/QScintilla-gpl-${pkgver}/Python"
     install -Dm755 Qsci.so \
