--- a/python2-qscintilla/trunk/PKGBUILD
+++ b/python2-qscintilla/trunk/PKGBUILD
@@ -3,24 +3,22 @@
 
 pkgname=python2-qscintilla
 pkgver=2.4.6
-pkgrel=3
+pkgrel=4
 license=('GPL')
 arch=('i686' 'x86_64')
 url="http://www.riverbankcomputing.co.uk/software/qscintilla/intro"
 pkgdesc="Python 2 bindings for QScintilla2"
-depends=('qscintilla' 'python2')
-makedepends=('python2-qt')
+depends=('qscintilla' 'python2-qt')
 source=("http://riverbankcomputing.com/static/Downloads/QScintilla2/QScintilla-gpl-${pkgver}.tar.gz")
 md5sums=('424a89736b900e6ca5bc6d929cdafaf8')
 
 build() {
-    cd ${srcdir}/QScintilla-gpl-${pkgver}/Python
+    cd "${srcdir}/QScintilla-gpl-${pkgver}/Python"
     python2 configure.py -c -p 4
     make
 }
 
 package() {
     cd "${srcdir}/QScintilla-gpl-${pkgver}/Python"
-    install -Dm755 Qsci.so \
-      ${pkgdir}/usr/lib/python2.7/site-packages/PyQt4/Qsci.so
+    make DESTDIR="${pkgdir}" INSTALL_ROOT="${pkgdir}" install
 }
