upgpkg: koffice-l10n 2.3.1-2 add Russian and Hungarian localization
git-svn-id: file:///srv/repos/svn-packages/svn@107224 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/koffice-l10n/trunk/PKGBUILD
+++ b/koffice-l10n/trunk/PKGBUILD
@@ -12,6 +12,7 @@ pkgname=('koffice-l10n-ca'
 	 'koffice-l10n-et'
 	 'koffice-l10n-fr'
 	 'koffice-l10n-gl'
+	 'koffice-l10n-hu'
 	 'koffice-l10n-it'
 	 'koffice-l10n-ja'
 	 'koffice-l10n-kk'
@@ -21,13 +22,14 @@ pkgname=('koffice-l10n-ca'
 	 'koffice-l10n-pl'
 	 'koffice-l10n-pt'
 	 'koffice-l10n-pt_br'
+	 'koffice-l10n-hu'
 	 'koffice-l10n-sv'
 	 'koffice-l10n-tr'
 	 'koffice-l10n-uk'
 	 'koffice-l10n-zh_cn'
 	 'koffice-l10n-zh_tw')
 pkgver=2.3.1
-pkgrel=1
+pkgrel=2
 arch=('any')
 url='http://www.koffice.org'
 license=('GPL')
@@ -44,6 +46,7 @@ source=("http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-et-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-fr-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-gl-${pkgver}.tar.bz2"
+        "http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-hu-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-it-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-ja-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-kk-${pkgver}.tar.bz2"
@@ -53,11 +56,13 @@ source=("http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-pl-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-pt-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-pt_BR-${pkgver}.tar.bz2"
+        "http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-ru-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-sv-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-tr-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-uk-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-zh_CN-${pkgver}.tar.bz2"
 	"http://download.kde.org/stable/koffice-${pkgver}/koffice-l10n/${pkgbase}-zh_TW-${pkgver}.tar.bz2")
+
 sha1sums=('360cf46412b4324f3fdd60f6757a92aae8c81208'
           '8fb57d39e4206e2300c48409cee5593ebbc11967'
           '6ff970dfd555fed8ba6b6b091f321dc5a1252252'
@@ -68,6 +73,7 @@ sha1sums=('360cf46412b4324f3fdd60f6757a92aae8c81208'
           'f778167722d9d7a72adede3920fa67d13e662db2'
           '275eccec608dd1f6a38c91792f038e354a3150ac'
           '387927410d6681d4b252c5054592d33f2db233f0'
+          '0d0f37ceeac5576862e518931651542a419b6215'
           '19ed8834799b5e2a1d33a09e8c77fe1ca83cf0c6'
           '925f1eed44ec110d97a688db6e330a4e0b354d68'
           '8cbf6cde9ef30c8b2150d1d92cec3fb496e9d7fa'
@@ -77,6 +83,7 @@ sha1sums=('360cf46412b4324f3fdd60f6757a92aae8c81208'
           '3815d7a80676ba91e224cc4d27cab9107410c913'
           '0d23cec4f8ffeeefc6616ff08fbc229bc3425cce'
           '42e1e1941f15b29351198ab80ed1c7e2f75b7b11'
+          '3da7de0d2e3987c6d6d693e1e92d3d63aa0463ac'
           '4febdca21875a4d3eb7bbb5e1c9a1b5a70d72753'
           '1d709bc0e816a59f0ed3c0d822ed0bc3ea9f11b1'
           '14a0623317425d3afd9d678941b7916abb51e535'
@@ -166,6 +173,14 @@ build() {
   make 
   cd ../..
 
+  install -d build/hu
+  cd build/hu
+  cmake ${srcdir}/koffice-l10n-hu-${pkgver} \
+    -DCMAKE_BUILD_TYPE=Release \
+    -DCMAKE_INSTALL_PREFIX=/usr
+  make
+  cd ../..
+
   install -d build/it
   cd build/it
   cmake ${srcdir}/koffice-l10n-it-${pkgver} \
@@ -236,6 +251,14 @@ build() {
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr
   make 
+  cd ../..
+
+  install -d build/ru
+  cd build/ru
+  cmake ${srcdir}/koffice-l10n-ru-${pkgver} \
+    -DCMAKE_BUILD_TYPE=Release \
+    -DCMAKE_INSTALL_PREFIX=/usr
+  make
   cd ../..
 
   install -d build/sv
@@ -332,6 +355,11 @@ package_koffice-l10n-gl() {
         cd $srcdir/build/gl
         make DESTDIR=$pkgdir install
 }
+package_koffice-l10n-hu() {
+        pkgdesc=('Hungarian Localization for Koffice')
+        cd $srcdir/build/hu
+        make DESTDIR=$pkgdir install
+}
 package_koffice-l10n-it() {
         pkgdesc=('Italian Localization for Koffice')
         cd $srcdir/build/it
@@ -375,6 +403,11 @@ package_koffice-l10n-pt() {
 package_koffice-l10n-pt_br() {
         pkgdesc=('Brazilian Portugese Localization for Koffice')
         cd $srcdir/build/pt_BR
+        make DESTDIR=$pkgdir install
+}
+package_koffice-l10n-ru() {
+        pkgdesc=('Russian Localization for Koffice')
+        cd $srcdir/build/ru
         make DESTDIR=$pkgdir install
 }
 package_koffice-l10n-sv() {
