--- a/koffice-l10n/trunk/PKGBUILD
+++ b/koffice-l10n/trunk/PKGBUILD
@@ -22,7 +22,7 @@ pkgname=('koffice-l10n-ca'
 	 'koffice-l10n-pl'
 	 'koffice-l10n-pt'
 	 'koffice-l10n-pt_br'
-	 'koffice-l10n-hu'
+	 'koffice-l10n-ru'
 	 'koffice-l10n-sv'
 	 'koffice-l10n-tr'
 	 'koffice-l10n-uk'
