--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Judd Vinet <jvinet@zeroflux.org>
 
 pkgname=iproute2
-pkgver=2.6.35
-pkgrel=4
+pkgver=2.6.37
+pkgrel=1
 pkgdesc="IP Routing Utilities"
 arch=('i686' 'x86_64')
 license=('GPL2')
@@ -17,19 +17,15 @@ options=('!makeflags')
 backup=('etc/iproute2/ematch_map' 'etc/iproute2/rt_dsfield' 'etc/iproute2/rt_protos' \
 	'etc/iproute2/rt_realms' 'etc/iproute2/rt_scopes' 'etc/iproute2/rt_tables')
 source=(http://devresources.linux-foundation.org/dev/iproute2/download/iproute2-${pkgver}.tar.bz2
-	'iproute2-fhs.patch' 'iproutegetfix.patch')
-sha1sums=('862b86ac73ea696867675765d119654553a22aeb'
-          '2416b11252364d7a6c742eabb4a6924a75637a46'
-          'cd8c969800a9bd1d4ebba0e1eae69d0892786d60')
+	'iproute2-fhs.patch')
+sha1sums=('7852fb66fb745dc3c1fabee24d7d8ff017c48d36'
+          '2416b11252364d7a6c742eabb4a6924a75637a46')
 
 build() {
   cd $srcdir/iproute2-${pkgver}
   
   # set correct fhs structure
   patch -Np1 -i ${srcdir}/iproute2-fhs.patch
-
-  # fix ip route get breakage
-  patch -Np0 -i ${srcdir}/iproutegetfix.patch
 
   ./configure
 
