upgpkg: dhcpcd 5.2.10-1 update to latest upstream version
git-svn-id: file:///srv/repos/svn-packages/svn@107233 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/dhcpcd/trunk/PKGBUILD
+++ b/dhcpcd/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Judd Vinet <jvinet.zeroflux.org>
 
 pkgname=dhcpcd
-pkgver=5.2.9
+pkgver=5.2.10
 pkgrel=1
 pkgdesc="RFC2131 compliant DHCP client daemon"
 url="http://roy.marples.name/dhcpcd/"
@@ -16,7 +16,7 @@ backup=('etc/conf.d/dhcpcd' 'etc/dhcpcd.conf')
 options=('emptydirs')  # We Need the Empty /var/lib/dhcpcd Directory
 source=("http://roy.marples.name/downloads/$pkgname/$pkgname-$pkgver.tar.bz2" \
         'dhcpcd.conf.d')
-sha1sums=('434397b1e881ddf3a97abe44c4cbadd5ff19436b'
+sha1sums=('3ff749f8a6ebc6231a011547ffe6cc7b4267f335'
           'b67b9ce6a2faaca75fea356966a16be2283b7db0')
 
 build() {
@@ -38,7 +38,7 @@ package() {
   ln -sf /sbin/dhcpcd ${pkgdir}/usr/sbin/dhcpcd
 
   # Install Configuration File used in /etc/rc.d/network
-  install -D -m644 ../dhcpcd.conf.d $pkgdir/etc/conf.d/$pkgname || return 1
+  install -D -m644 ../dhcpcd.conf.d $pkgdir/etc/conf.d/$pkgname
 
   # Install License
   install -d $pkgdir/usr/share/licenses/$pkgname
