--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,21 +2,18 @@
 # Contributor: Jeff Brodnax <tullyarcher@bellsouth.net>
 # Maintainer: Paul Mattal <paul@archlinux.org>
 pkgname=postfix
-pkgver=2.7.2
-pkgrel=2
+pkgver=2.8.0
+pkgrel=1
 pkgdesc='Secure, fast, easy to administer drop in replacement for Sendmail (MTA)'
 url='http://www.postfix.org/'
 arch=('i686' 'x86_64')
 license=('custom')
 depends=('pcre' 'libsasl' 'libmysqlclient' 'postgresql-libs>=8.4' 'libldap>=2.4' 'db')
-backup=(etc/postfix/aliases etc/postfix/virtual etc/postfix/relocated \
-        etc/postfix/access etc/postfix/header_checks etc/postfix/transport \
-        etc/postfix/generic etc/postfix/canonical \
-        etc/postfix/main.cf etc/postfix/master.cf)
+backup=('etc/postfix/'{access,aliases,canonical,generic,header_checks,main.cf,master.cf,relocated,transport,virtual})
 source=("ftp://ftp.porcupine.org/mirrors/postfix-release/official/${pkgname}-${pkgver}.tar.gz" \
         'aliases.patch' \
         "${pkgname}")
-sha1sums=('2415c63c98ba0e0273bcb490ee7753a3891f5a73'
+sha1sums=('d7a4fb5ee1f5d12aa1abd6cf8ce8254b4805486d'
           '5fc3de6c7df1e5851a0a379e825148868808318b'
           '6f41e9ce5c0125fbd4eb016464c6ad1fd18eccea')
 
