--- a/trunk/makepkg.conf
+++ b/trunk/makepkg.conf
@@ -83,7 +83,7 @@ MAN_DIRS=({usr{,/local}{,/share},opt/*}/{man,info})
 #-- Doc directories to remove (if !docs is specified)
 DOC_DIRS=(usr/{,local/}{,share/}{doc,gtk-doc} opt/*/{doc,gtk-doc})
 #-- Directories to be searched for the strip option (if strip is specified)
-STRIP_DIRS=(bin lib sbin usr/{bin,lib,sbin,local/{bin,lib,sbin}} opt/*/{bin,lib,sbin})
+STRIP_DIRS=(bin lib sbin usr/{bin,lib,lib32,sbin,local/{bin,lib,sbin}} opt/*/{bin,lib,sbin})
 #-- Files to be removed from all packages (if purge is specified)
 PURGE_TARGETS=(usr/{,share}/info/dir .packlist *.pod)
 
