--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=xfce4-xkb-plugin
 pkgver=0.5.3.3
-pkgrel=3
+pkgrel=4
 pkgdesc="plugin to switch keyboard layouts for the Xfce4 panel"
 arch=(i686 x86_64)
 license=('custom')
@@ -14,13 +14,19 @@ depends=('xfce4-panel' 'libxfcegui4' 'libxklavier>=5.0' 'librsvg')
 makedepends=('intltool')
 options=('!libtool')
 source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/0.5/${pkgname}-${pkgver}.tar.gz
-        xfce4-xkb-plugin-0.5.3.3-libxklavier.patch)
-sha1sums=('5e83d55cd6f14a62a87ccadd0f11eee070a6f4a7'
-          '44691bd348e33ea17afe45869675c0f7c03ed32f')
+        xfce4-xkb-plugin-0.5.3.3-libxklavier.patch
+	crashfix.diff)
+md5sums=('b233cc9de1cbace075eaf6e2c9a8e685'
+         '781165ce1bc08059ae8e846c45c0bab2'
+         '4faeaaea7d294cbad2972af964508086')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  patch -Np1 -i "${srcdir}/xfce4-xkb-plugin-0.5.3.3-libxklavier.patch" || return 1
+  patch -Np1 -i "${srcdir}/xfce4-xkb-plugin-0.5.3.3-libxklavier.patch"
+
+  # https://bugs.archlinux.org/task/21067 - http://bugzilla.xfce.org/show_bug.cgi?id=6477
+  patch -Np1 -i ${srcdir}/crashfix.diff
+  
   ./configure --prefix=/usr \
 	--sysconfdir=/etc \
 	--libexecdir=/usr/lib \
