--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=thunar-archive-plugin
 pkgver=0.2.4
-pkgrel=7
+pkgrel=8
 pkgdesc="create and deflate archives in thunar"
 arch=(i686 x86_64)
 license=('GPL2')
@@ -23,7 +23,7 @@ build() {
   cd ${srcdir}/${pkgname}-${pkgver}
   # thunar 1.2 fix
   patch -Np1 -i ${srcdir}/thunar-vfs2gio.patch
-#  sed -i -e 's/thunarx-1/thunarx-2/g' `grep -l 'thunarx-1' * -R`
+  sed -i -e 's/thunarx-1/thunarx-2/g' `grep -l 'thunarx-1' * -R`
  
   ./configure --prefix=/usr \
 	--sysconfdir=/etc \
