upgpkg: thunar-archive-plugin 0.2.4-8 add another sed fix to make it work
git-svn-id: file:///srv/repos/svn-packages/svn@107274 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/thunar-archive-plugin/trunk/PKGBUILD
+++ b/thunar-archive-plugin/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=thunar-archive-plugin
 pkgver=0.2.4
-pkgrel=7
+pkgrel=8
 pkgdesc="create and deflate archives in thunar"
 arch=(i686 x86_64)
 license=('GPL2')
@@ -23,7 +23,7 @@ build() {
   cd ${srcdir}/${pkgname}-${pkgver}
   # thunar 1.2 fix
   patch -Np1 -i ${srcdir}/thunar-vfs2gio.patch
-#  sed -i -e 's/thunarx-1/thunarx-2/g' `grep -l 'thunarx-1' * -R`
+  sed -i -e 's/thunarx-1/thunarx-2/g' `grep -l 'thunarx-1' * -R`
  
   ./configure --prefix=/usr \
 	--sysconfdir=/etc \
