fix mistake: remove libxml2
git-svn-id: file:///srv/repos/svn-packages/svn@107286 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/bind/trunk/PKGBUILD
+++ b/bind/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 pkgname=bind
 pkgver=9.7.2.P3
 _pkgver=9.7.2-P3
-pkgrel=1
+pkgrel=2
 pkgdesc='Berkeley Internet Name Daemon (BIND) is the reference implementation of the Domain Name System (DNS) protocols'
 arch=('i686' 'x86_64')
 url='http://www.isc.org/software/bind/'
@@ -16,8 +16,6 @@ backup=('etc/logrotate.d/named'
         'etc/named.conf'
         'etc/rndc.key')
 depends=('openssl')
-makedepends=('libxml2')
-optdepends=('libxml2: statistics-channels')
 options=('!libtool')
 source=("http://ftp.isc.org/isc/bind9/${_pkgver}/${pkgname}-${_pkgver}.tar.gz"
         'ftp://ftp.rs.internic.net/domain/db.cache'
@@ -52,7 +50,7 @@ build() {
 	./configure \
 		--prefix=/usr --sysconfdir=/etc --localstatedir=/var \
 		--with-libtool --enable-shared --disable-linux-caps \
-		--with-openssl=yes --with-libxml2=yes
+		--with-openssl=yes
 	make
 }
 
