--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,22 +3,22 @@
 # Contributor: tobias <tobias funnychar archlinux.org>
 
 pkgname=xfce4-cpufreq-plugin
-pkgver=0.0.1
-pkgrel=8
+pkgver=1.0.0
+pkgrel=1
 pkgdesc="CPU frequency plugin for the Xfce4 panel"
 arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://goodies.xfce.org/projects/panel-plugins/xfce4-cpufreq-plugin"
 groups=('xfce4-goodies')
 depends=('xfce4-panel>=4.7.4' 'libxfcegui4' 'hicolor-icon-theme')
-makedepends=('perlxml')
+makedepends=('intltool')
 options=('!libtool')
 install=${pkgname}.install
-source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/0.0/${pkgname}-${pkgver}.tar.gz)
-md5sums=('7ad41541d8065aab941de7d62857aa8b')
+source=(http://archive.xfce.org/src/panel-plugins/${pkgname}/1.0/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('24cae9b8583cae82b715b4f72aa8e341')
 
 build() {
-  cd ${srcdir}/xfce4-cpu-freq-plugin-${pkgver}
+  cd ${srcdir}/xfce4-cpufreq-plugin-${pkgver}
   ./configure --prefix=/usr \
 	--sysconfdir=/etc \
 	--libexecdir=/usr/lib \
@@ -29,6 +29,6 @@ build() {
 }
 
 package() {
-  cd ${srcdir}/xfce4-cpu-freq-plugin-${pkgver}
+  cd ${srcdir}/xfce4-cpufreq-plugin-${pkgver}
   make DESTDIR=${pkgdir} install
 }
