upgpkg: openldap 2.4.23-3 use the config dir schema (FS#22566)
git-svn-id: file:///srv/repos/svn-packages/svn@107302 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/openldap/trunk/PKGBUILD
+++ b/openldap/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=openldap
 pkgver=2.4.23
-pkgrel=2
+pkgrel=3
 pkgdesc="LDAP Server"
 arch=('i686' 'x86_64')
 license=('custom')
@@ -17,9 +17,8 @@ source=("ftp://ftp.openldap.org/pub/OpenLDAP/openldap-release/${pkgname}-${pkgve
         'slapd'
         'slapd.default')
 md5sums=('90150b8c0d0192e10b30157e68844ddf'
-         'a9c9d906b2132ee3cb3d100ef1c068ae'
-         '95f50ebf185b1caf299fa4e3970d8ec2')
-options=('!emptydirs')
+         'd245b56b84fae7358e0f3fb3dfa9a558'
+         '6be69f6b7e522cb64cce8703da81ed32')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
@@ -90,6 +89,7 @@ package() {
 
   cd ../..
 
+  install -d ${pkgdir}/etc/openldap/slapd.d
   install -Dm755 ${srcdir}/slapd ${pkgdir}/etc/rc.d/slapd
   install -Dm644 ${srcdir}/slapd.default ${pkgdir}/etc/conf.d/slapd
   install -dm700 ${pkgdir}/var/lib/openldap
