- remove "chmod -R" from install script - make most configuration file just readable for named
git-svn-id: file:///srv/repos/svn-packages/svn@107320 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/bind/trunk/PKGBUILD
+++ b/bind/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 pkgname=bind
 pkgver=9.7.2.P3
 _pkgver=9.7.2-P3
-pkgrel=2
+pkgrel=3
 pkgdesc='Berkeley Internet Name Daemon (BIND) is the reference implementation of the Domain Name System (DNS) protocols'
 arch=('i686' 'x86_64')
 url='http://www.isc.org/software/bind/'
@@ -59,19 +59,19 @@ package() {
 
 	make DESTDIR="${pkgdir}" install
 
-	install -D -m755 ../named "${pkgdir}"/etc/rc.d/named
-	install -D -m640 ../named.conf "${pkgdir}"/etc/named.conf
-	install -D -m644 ../named.conf.d "${pkgdir}"/etc/conf.d/named
-	install -D -m600 ../named.logrotate "${pkgdir}"/etc/logrotate.d/named
-
-	install -D -m600 ../db.cache "${pkgdir}"/var/named/root.hint
-	install -D -m600 ../127.0.0.zone "${pkgdir}"/var/named/127.0.0.zone
-	install -D -m600 ../localhost.zone "${pkgdir}"/var/named/localhost.zone
-
-	install -d -m755 "${pkgdir}"/var/run/named
 	install -D -m644 COPYRIGHT "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 
-	# documentation
 	install -d "${pkgdir}"/usr/share/doc/bind
 	install ./doc/arm/*.html "${pkgdir}"/usr/share/doc/bind/
+
+	install -D -m755 ../named "${pkgdir}"/etc/rc.d/named
+	install -D -m644 ../named.conf.d "${pkgdir}"/etc/conf.d/named
+	install -D -m600 ../named.logrotate "${pkgdir}"/etc/logrotate.d/named
+	install -D -m640 -o  0 -g 40 ../named.conf "${pkgdir}"/etc/named.conf
+
+	install -d -m750 -o  0 -g 40 "${pkgdir}"/var/named
+	install -d -m755 -o 40 -g 40 "${pkgdir}"/var/run/named
+	install    -m640 -o  0 -g 40 ../db.cache "${pkgdir}"/var/named/root.hint
+	install    -m640 -o  0 -g 40 ../127.0.0.zone "${pkgdir}"/var/named/
+	install    -m640 -o  0 -g 40 ../localhost.zone "${pkgdir}"/var/named/
 }
