--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=openldap
 pkgver=2.4.23
-pkgrel=3
+pkgrel=4
 pkgdesc="LDAP Server"
 arch=('i686' 'x86_64')
 license=('custom')
@@ -17,8 +17,8 @@ source=("ftp://ftp.openldap.org/pub/OpenLDAP/openldap-release/${pkgname}-${pkgve
         'slapd'
         'slapd.default')
 md5sums=('90150b8c0d0192e10b30157e68844ddf'
-         'd245b56b84fae7358e0f3fb3dfa9a558'
-         '62c8c407d210e38f2f923efd4ac0ccfa')
+         '832354417c495f29affd2c772808959d'
+         '6be69f6b7e522cb64cce8703da81ed32')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
@@ -89,7 +89,7 @@ package() {
 
   cd ../..
 
-  install -d ${pkgdir}/etc/openldap/slapd.d
+  install -dm700 ${pkgdir}/etc/openldap/slapd.d
   install -Dm755 ${srcdir}/slapd ${pkgdir}/etc/rc.d/slapd
   install -Dm644 ${srcdir}/slapd.default ${pkgdir}/etc/conf.d/slapd
   install -dm700 ${pkgdir}/var/lib/openldap
