--- a/vlc/trunk/PKGBUILD
+++ b/vlc/trunk/PKGBUILD
@@ -5,8 +5,8 @@
 
 pkgbase=vlc
 pkgname=('vlc' 'vlc-plugin')
-pkgver=1.1.5
-pkgrel=3
+pkgver=1.1.6
+pkgrel=1
 arch=('i686' 'x86_64')
 url="http://www.videolan.org/vlc/"
 license=('GPL')
@@ -20,11 +20,15 @@ makedepends=('a52dec' 'fluidsynth' 'libmtp' 'libdvbpsi' 'lirc-utils'
              'flac' 'libtheora' 'alsa-lib' 'jack' 'kdelibs' 'udev'
              'libraw1394' 'libdc1394' 'libavc1394' 'libva' 'libpulse')
 options=('!libtool')
-source=("http://download.videolan.org/pub/videolan/${pkgbase}/${pkgver}/${pkgbase}-${pkgver}.tar.bz2")
-md5sums=('fdc23693351ed57af9f4c85ea885b536')
+source=("http://download.videolan.org/pub/videolan/${pkgbase}/${pkgver}/${pkgbase}-${pkgver}.tar.bz2"
+        lirc-build.patch)
+md5sums=('c47f3ebc886f2aff8c95b98c564d1759'
+         'f276f5bec6e9d00058548cea1070dd2c')
 
 build() {
   cd "${srcdir}/${pkgbase}-${pkgver}"
+
+  patch -Np1 -i "${srcdir}/lirc-build.patch"
 
   sed -i -e 's:truetype/freefont:TTF:g' modules/misc/freetype.c
   ./configure --prefix=/usr \
@@ -40,7 +44,6 @@ build() {
               --enable-mozilla \
               --with-live555-tree=/usr/lib/live \
               --enable-realrtsp
-  CFLAGS="-fPIC"
   make
 }
 
