--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,12 +4,12 @@
 
 pkgname=deluge
 pkgver=1.3.1
-pkgrel=2
+pkgrel=3
 pkgdesc="A bittorrent client written with python and pygtk"
 arch=('any')
 url="http://deluge-torrent.org/"
 license=('GPL3')
-depends=('pyxdg' 'python2-distribute' 'libtorrent-rasterbar>=0.15.0' 'twisted' 'pyopenssl' 'xdg-utils' 'python2-chardet')
+depends=('pyxdg' 'python2-distribute' 'libtorrent-rasterbar>=0.15.0' 'twisted' 'python2-pyopenssl' 'xdg-utils' 'python2-chardet')
 makedepends=('intltool' 'pygtk' 'librsvg' 'python-mako')
 optdepends=('python-notify: libnotify notifications'
 	    'pygtk: needed for gtk ui'
