--- a/kdevelop/trunk/PKGBUILD
+++ b/kdevelop/trunk/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Giovanni Scafora <giovanni@archlinux.org>
 
 pkgname=kdevelop
-pkgver=4.1.2
+pkgver=4.2.0
 pkgrel=1
 pkgdesc="A C/C++ development environment for KDE"
 arch=('i686' 'x86_64')
 url="http://www.kdevelop.org/"
 license=('GPL')
-depends=('kdebase-workspace' 'kdevplatform' 'kdeutils-okteta')
+depends=('kdebase-workspace' 'kdevplatform' 'kdesdk-okteta')
 makedepends=('cmake' 'automoc4' 'perl')
 install="${pkgname}.install"
 source=("http://download.kde.org/stable/${pkgname}/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
-sha1sums=('e9e83f931bfd0ae508203a1d340fb1585eed95ac')
+sha1sums=('cebd9c00e19a9c27ad65e89b4653ca0b31261275')
 
 build() {
   cd ${srcdir}
