prepare next release
git-svn-id: file:///srv/repos/svn-packages/svn@107406 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/python-qt/trunk/PKGBUILD
+++ b/python-qt/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=python-qt
-pkgver=4.8.2
-pkgrel=4
+pkgver=4.8.3
+pkgrel=1
 arch=('i686' 'x86_64')
 url="http://riverbankcomputing.co.uk/software/pyqt/intro"
 license=('GPL')
@@ -13,16 +13,11 @@ optdepends=('phonon: enable audio and video in PyQt applications'
 	'qscintilla: QScintilla API'
 	'qt-assistant-compat: add PyQt online help in Qt Assistant')
 makedepends=('phonon' 'qt-assistant-compat')
-source=("http://riverbankcomputing.co.uk/static/Downloads/PyQt4/PyQt-x11-gpl-${pkgver}.tar.gz"
-        'fix-stackedwidget-bug.patch')
-md5sums=('142a32f126f205a2bd77f6a9910f5333'
-        '42cfd44a8ec063cce3e328ddb9892565')
+source=("http://riverbankcomputing.co.uk/static/Downloads/PyQt4/PyQt-x11-gpl-${pkgver}.tar.gz")
+md5sums=('d54fd1c37a74864faf42709c8102f254')
 
 build() {
   cd "${srcdir}/PyQt-x11-gpl-${pkgver}"
-
-  # Already fixed upstream
-  patch -Np1 -i "${srcdir}/fix-stackedwidget-bug.patch"
 
   python configure.py \
     --confirm-license \
