upgpkg: aufs2 2.6.37_20110124-1 rebuild against latest .37 snapshot
git-svn-id: file:///srv/repos/svn-packages/svn@107419 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/aufs2/trunk/PKGBUILD
+++ b/aufs2/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Paul Mattal <pjmattal@elys.com>
 
 pkgname=aufs2
-pkgver=2.6.37_20110105
+pkgver=2.6.37_20110124
 pkgrel=1
 #_kernver=${pkgver%_*}-ARCH
 _kernver=2.6.37-ARCH
@@ -15,7 +15,6 @@ makedepends=('kernel26-headers>=2.6.37' 'kernel26-headers<2.6.38')
 replaces=('aufs')
 install=${pkgname}.install
 source=("ftp://ftp.archlinux.org/other/aufs2/${pkgname}-${pkgver}.tar.gz")
-       #aufs2-module-2.6.36.patch)
 options=('!makeflags')
 
 build() {
@@ -42,8 +41,10 @@ build() {
   fi
   sed -i "s|CONFIG_AUFS_INO_T_64 =.*|CONFIG_AUFS_INO_T_64 =${inot64}|" \
      config.mk 
-  # build
-  make aufs.ko KDIR=/usr/src/linux-${_kernver} 
+  # build, sed fixes are from gentoo portage build
+  sed -i "s:aufs.ko usr/include/linux/aufs_type.h:aufs.ko:g" Makefile
+  sed -i "s:__user::g" include/linux/aufs_type.h
+  make KDIR=/usr/src/linux-${_kernver}
 }
 
 package() {
@@ -52,8 +53,8 @@ package() {
     $pkgdir/lib/modules/${_kernver}/kernel/fs/aufs/aufs.ko 
   # tweak the install script for the right kernel version
   sed -i -e "s/KERNEL_VERSION=.*/KERNEL_VERSION=${_kernver}/g" \
-    $startdir/$pkgname.install 
+    $startdir/$pkgname.install
   # install include files
-  install -D -m 644 include/linux/aufs_type.h $pkgdir/usr/src/linux-$_kernver/include/linux/aufs_type.h 
+  install -D -m 644 include/linux/aufs_type.h $pkgdir/usr/include/linux/aufs_type.h 
 }
-md5sums=('630c9c36bd4c0aa75a12b9bfa01ef8ee')
+md5sums=('fa64d7893490ef9c82310ebd5f730443')
