upgpkg: aufs2-util 20110124-1 rebuild against latest .37 snapshot
git-svn-id: file:///srv/repos/svn-packages/svn@107424 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/aufs2-util/trunk/PKGBUILD
+++ b/aufs2-util/trunk/PKGBUILD
@@ -2,24 +2,24 @@
 # Contributor: Paul Mattal <paul@mattal.com>
 # Maintainer: Paul Mattal <pjmattal@elys.com>
 pkgname=aufs2-util
-pkgver=20100802
+pkgver=20110124
 pkgrel=1
 pkgdesc="Another Unionfs Implementation that supports NFS branches"
 arch=('i686' 'x86_64')
 url="http://aufs.sourceforge.net/"
 license=('GPL2')
 depends=('glibc')
-makedepends=('aufs2>=2.6.35_20100802' 'kernel26-headers')
+makedepends=('aufs2>=2.6.37_20110124' 'kernel26-headers')
 replaces=('aufs-utils')
 source=("ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}.tar.gz")
 
 build() {
   cd $srcdir/$pkgname-$pkgver
-  make || return 1
+  make
 }
 
 package() {
   cd $srcdir/$pkgname-$pkgver
-  make DESTDIR=$pkgdir install || return 1
+  make DESTDIR=$pkgdir install
 }
-md5sums=('f10e57e84df2ca01c338b2d8a2a1f337')
+md5sums=('6272b6f28477bb8bf90ed43e66564e7a')
