--- a/tiacx/trunk/PKGBUILD
+++ b/tiacx/trunk/PKGBUILD
@@ -3,28 +3,28 @@
 
 pkgname=tiacx
 pkgver=20080210
-pkgrel=18
+pkgrel=19
 pkgdesc="OpenSource module for Texas Instruments ACX100/ACX111 wireless chips. For stock arch 2.6 kernel"
 arch=(i686 x86_64)
 url="http://acx100.sourceforge.net/"
 license=('MPL')
-depends=('wireless_tools' 'kernel26>=2.6.36' 'kernel26<2.6.37' 'tiacx-firmware')
-makedepends=('kernel26-headers>=2.6.36' 'kernel26-headers<2.6.37')
+depends=('wireless_tools' 'kernel26>=2.6.37' 'kernel26<2.6.38' 'tiacx-firmware')
+makedepends=('kernel26-headers>=2.6.37' 'kernel26-headers<2.6.38')
 install=acx.install
 source=(http://downloads.sourceforge.net/sourceforge/acx100/acx-$pkgver.tar.bz2
         kernel-2.6.27.patch
         kernel-2.6.30.patch
         kernel-2.6.31.patch
         kernel-2.6.33.patch)
-_kernver=2.6.36-ARCH
+_kernver=2.6.37-ARCH
 
 build() {
     cd $srcdir/acx-$pkgver
-    patch -Np1 -i ../kernel-2.6.27.patch || return 1
-    patch -Np0 -i ../kernel-2.6.30.patch || return 1
-    patch -Np1 -i ../kernel-2.6.31.patch || return 1
-    patch -Np0 -i ../kernel-2.6.33.patch || return 1
-    make -C /lib/modules/${_kernver}/build M=`pwd` || return 1
+    patch -Np1 -i ../kernel-2.6.27.patch 
+    patch -Np0 -i ../kernel-2.6.30.patch
+    patch -Np1 -i ../kernel-2.6.31.patch
+    patch -Np0 -i ../kernel-2.6.33.patch
+    make -C /lib/modules/${_kernver}/build M=`pwd` 
     install -D acx.ko $pkgdir/lib/modules/${_kernver}/kernel/drivers/net/wireless/tiacx/acx.ko
     sed -i -e "s/KERNEL_VERSION='.*'/KERNEL_VERSION='${_kernver}'/" $startdir/*.install
 }
