--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: francois <francois.archlinux.org> 
 pkgname=perl
 pkgver=5.12.2
-pkgrel=1
+pkgrel=2
 pkgdesc="A highly capable, feature-rich programming language"
 arch=(i686 x86_64)
 license=('GPL' 'PerlArtistic')
@@ -12,7 +12,7 @@ url="http://www.perl.org"
 groups=('base')
 depends=('gdbm' 'db>=4.8' 'coreutils' 'glibc' 'sh')
 changelog=ChangeLog
-source=(http://www.cpan.org/src/5.0/perl-${pkgver}.tar.bz2 perlbin.sh)
+source=(http://www.cpan.org/src/5.0/perl-${pkgver}.tar.bz2 perlbin.sh fix-h2ph-and-tests.patch)
 install=perl.install
 provides=(
 perl-archive-extract=0.38
@@ -156,8 +156,11 @@ build() {
     -Dinc_version_list=none \
     -Dman1ext=1perl -Dman3ext=3perl ${arch_opts}
     #-Dotherlibdirs=/usr/lib/perl5/site_perl/5.10.1:/usr/share/perl5/site_perl/5.10.1:/usr/lib/perl5/current:/usr/lib/perl5/site_perl/current \
-
-  make || return 1
+  patch -Np1 -i $srcdir/fix-h2ph-and-tests.patch
+  make
+}
+package() {
+  cd ${srcdir}/${pkgname}-${pkgver}
   make install
 
   ### Perl Settings ###
@@ -200,4 +203,6 @@ build() {
   find $pkgdir/usr/lib -name *.pod -delete
   find $pkgdir -name .packlist -delete
 }
-md5sums=('7b018fe9c2f434eff0c629b4c515a8fc' 'f86eb0dba1638ca6d1c8fff1b06c2a71')
+md5sums=('7b018fe9c2f434eff0c629b4c515a8fc'
+         'f86eb0dba1638ca6d1c8fff1b06c2a71'
+         '294b5311cbfc50e7dcffbee85854da38')
