--- a/gnome-python/trunk/PKGBUILD
+++ b/gnome-python/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 pkgbase=gnome-python
 pkgname=('gnome-python' 'python2-bonobo' 'python2-gconf' 'python2-libgnome' 'python2-gnomecanvas' 'python2-gnomevfs')
 pkgver=2.28.1
-pkgrel=6
+pkgrel=7
 arch=(i686 x86_64)
 license=('LGPL')
 makedepends=('pygtk' 'pyorbit' 'libgnomeui')
@@ -46,7 +46,7 @@ package_python2-gconf(){
 
 package_python2-libgnome() {
     pkgdesc="Python bindings for libgnome"
-    depends=('pygtk' 'libgnomeui' 'python2-gnomevfs' 'python2-gnomecanvas')
+    depends=('pygtk' 'libgnomeui' 'python2-gnomevfs' 'python2-gnomecanvas' 'python2-bonobo')
 
     cd "${srcdir}/gnome-python-${pkgver}"
     make -C gnome install DESTDIR="${pkgdir}"
