fix pkgdesc for diagram extension, FS#22602
git-svn-id: file:///srv/repos/svn-packages/svn@107451 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/libreoffice/trunk/PKGBUILD
+++ b/libreoffice/trunk/PKGBUILD
@@ -638,7 +638,7 @@ package_libreoffice-extension-watch-window() {
 
 package_libreoffice-extension-diagram() {
 
- pkgdesc="An OOo Draw and Impress extension that creates your favorite diuagrams with a few clicks"
+ pkgdesc="An OOo Draw and Impress extension that creates your favorite diagrams with a few clicks"
  #arch=('any')
  depends=('libreoffice')
  groups=('libreoffice-extensions')
