upgpkg: memtest86+ 4.20-1 Upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@107479 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/memtest86+/trunk/PKGBUILD
+++ b/memtest86+/trunk/PKGBUILD
@@ -1,8 +1,8 @@
 # $Id$
-#Maintainer: Tobias Powalowski <tpowa@archlinux.org>
+# Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=memtest86+
-pkgver=4.10
+pkgver=4.20
 pkgrel=1
 pkgdesc="An advanced memory diagnostic tool"
 arch=('any')
@@ -10,9 +10,9 @@ url="http://www.memtest.org"
 license=('GPL2')
 install=memtest86+.install
 source=(http://www.memtest.org/download/${pkgver}/${pkgname}-${pkgver}.bin.gz)
-md5sums=('e5e7e79abe2fb948b83a523c248fe117')
-sha1sums=('852b05bf2258152882e1278985ba107bfceb282c')
+md5sums=('4640a702c3e7a5a74af069f51ab8345f')
+sha1sums=('5a91dc1c9e3457456f314e6c99f579210624fafc')
 
 package() {
-  install -m644 -D "${srcdir}/${pkgname}-${pkgver}.bin" "${pkgdir}/boot/memtest86+/memtest.bin"
+  install -D -m644 "${srcdir}/${pkgname}-${pkgver}.bin" "${pkgdir}/boot/memtest86+/memtest.bin"
 }
