upgpkg: progsreiserfs 0.3.0.5-6 remove binaries and only provide the lib
git-svn-id: file:///srv/repos/svn-packages/svn@107514 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/progsreiserfs/trunk/PKGBUILD
+++ b/progsreiserfs/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=progsreiserfs
 pkgver=0.3.0.5
-pkgrel=5
+pkgrel=6
 pkgdesc="library for accessing and manipulating reiserfs partitions"
 arch=(i686 x86_64)
 url="http://www.namesys.com"
@@ -17,10 +17,14 @@ md5sums=('d822579bbd4a29a1be5e4490869d9bee')
 
 build()        {
         cd ${srcdir}/${pkgname}-${pkgver}
-        ./configure --prefix=/usr --mandir=/usr/share/man || return 1
-        make || return 1
-        make DESTDIR=${pkgdir} install || return 1
-	rm ${pkgdir}/usr/share/man/man8/mkfs.reiserfs.8
-        rm ${pkgdir}/usr/share/man/man8/resizefs.reiserfs.8
-        rm ${pkgdir}/usr/share/man/man8/tunefs.reiserfs.8
+        ./configure --prefix=/usr --mandir=/usr/share/man 
+        make
+}
+package() {
+        cd ${srcdir}/${pkgname}-${pkgver} 
+        make DESTDIR=${pkgdir} install
+        # only provide lib and includes files
+        # https://bugs.archlinux.org/task/22255
+        rm -r ${pkgdir}/usr/sbin
+	rm -r ${pkgdir}/usr/share/man/
 }
