upgpkg: nilfs-utils 2.0.21-1 update to 2.0.21
git-svn-id: file:///srv/repos/svn-packages/svn@107520 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/nilfs-utils/trunk/PKGBUILD
+++ b/nilfs-utils/trunk/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer : Ionut Biru <ibiru@archlinux.org>
 # Contributor: Geoffroy Carrier <geoffroy.carrier@koon.fr> 
 pkgname=nilfs-utils
-pkgver=2.0.20
+pkgver=2.0.21
 pkgrel=1
 pkgdesc="A log-structured file system supporting continuous snapshotting (userspace utils)"
 arch=('i686' 'x86_64')
 url="http://www.nilfs.org/"
-license=('GPL2')
+license=('GPL2' 'LGPL2.1')
 backup=('etc/nilfs_cleanerd.conf')
-depends=('e2fsprogs')
+depends=('util-linux-ng')
 options=(!libtool)
 source=(http://www.nilfs.org/download/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('04287d6c96df7d823a096c203021a2ec')
+md5sums=('7f970f35950b429ac490df594c9d8fc1')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
