--- a/kdebase/trunk/PKGBUILD
+++ b/kdebase/trunk/PKGBUILD
@@ -13,15 +13,15 @@ pkgname=('kdebase-dolphin'
          'kdebase-kwrite'
          'kdebase-lib'
          'kdebase-plasma')
-pkgver=4.5.5
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdebase')
-makedepends=('kdebase-workspace' 'pkgconfig' 'cmake' 'automoc4' 'ruby' 'docbook-xsl')
+makedepends=('kdebase-workspace' 'pkgconfig' 'cmake' 'automoc4' 'docbook-xsl')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('fa5a89dad13743c03831e930af978b593ad6ec6c')
+sha1sums=('887ddea760aaabb277082f9e8c0b2f8905e318b8')
 
 build() {
 	cd $srcdir
@@ -81,16 +81,16 @@ package_kdebase-kfind() {
 
 package_kdebase-konqueror() {
 	pkgdesc='KDE File Manager & Web Browser'
-	depends=('kdebase-runtime' 'kdebase-dolphin' 'kdebase-keditbookmarks')
+	depends=('kdebase-dolphin' 'kdebase-keditbookmarks')
 	optdepends=('kwebkitpart: to enable webkit engine')
 	url="http://kde.org/applications/internet/konqueror/"
 	install='kdebase.install'
-	conflicts=('kdebase-nsplugins')
-	replaces=('kdebase-nsplugins')
-	for i in konqueror doc/konqueror nsplugins; do
-		cd $srcdir/build/apps/${i}
-		make DESTDIR=$pkgdir install
-	done
+    conflicts=('kdebase-nsplugins')
+    replaces=('kdebase-nsplugins')
+    for i in konqueror doc/konqueror nsplugins; do
+        cd $srcdir/build/apps/${i}
+        make DESTDIR=$pkgdir install
+    done
 }
 
 package_kdebase-konsole() {
